froze python dependency versions in requirements.txt

--- a/ai/requirements.txt
+++ b/ai/requirements.txt
@@ -1,10 +1,10 @@
-ray[rllib]
-ray[tune]
-pyarrow
-dm-tree
-gymnasium
-torch
-stable-baselines3[extra]
-scipy
-lz4
-ipywidgets
+ray[rllib]==2.49.2
+ray[tune]==2.49.2
+pyarrow==21.0.0
+dm-tree==0.1.9
+gymnasium==1.1.1
+torch==2.8.0
+stable-baselines3[extra]==2.7.0
+scipy==1.15.3
+lz4==4.4.4
+ipywidgets==8.1.7
